--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome to</h1>
             <h1><span class="Color-Orange">Saymon Akram</span> World</h1>
@@ -26,7 +26,7 @@
             <img src="images/my-bg.png" alt="" srcset="">
         </div>
     </section>
-    <section class="Big-dream">
+    <section class="Big-dream flexible-container">
         <div class="half-width">
             <img src="images/my-bg2.png" alt="" srcset="">
         </div>
@@ -39,6 +39,27 @@
             <a class="link-button" target="_blank" href="">Download Resume</a>
         </div>
     </section>
+    <section class="Experiance-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="full-stack" class="experiance-item">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="Color-Orange">2021-Present | Pro Level Developer</h3>
+                <p>
+                    I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security.
+                    I will give you 100% web solution
+                </p>
+            </div>
+            <div id="web-dev" class="experiance-item">
+                <h2>Baby Web Developer</h2>
+                <h3 class="Color-Orange">2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>© Saimon Akram 2022, a Programming Hero initiative.</p>
+    </footer>
 </body>
 
 </html>
